--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,178 @@
-on:
-    push:
-        branches:
-            - main
+on: workflow_dispatch
 
 jobs:
-    contrib-readme-job:
-        runs-on: ubuntu-latest
-        name: A job to automate contrib in readme
-        steps:
-            - name: Contribute List
-              uses: akhilmhdh/contributors-readme-action@v2.3.6
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  contrib-readme-job:
+    runs-on: ubuntu-latest
+    name: A job to automate contrib in readme
+    steps:
+      - name: Contribute List
+        uses: akhilmhdh/contributors-readme-action@v2.3.6
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  generate_md_files:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Generate MD Files for Algorithms
+        run: |
+          for file in ALGORITHMS/*; do
+              if [ -f "$file" ]; then
+                  filename=$(basename "$file")
+                  filename_noext="${filename%.*}"
+                  file_extension="${filename##*.}"
+                  echo "Creating $filename.md from $file"
+                  
+                  # Add front matter to the MD file
+                  echo "---" > "src/pages/submissions/$filename.md"
+                  echo "extension: $file_extension" >> "src/pages/submissions/$filename.md" # Add the extension
+                  
+                  # Get the author's username who committed the file
+                  author_username=$(git log -1 --format='%an' -- "$file")
+                  echo "author: $author_username" >> "src/pages/submissions/$filename.md" # Add the author
+                  echo "category: Algorithms" >> "src/pages/submissions/$filename.md"
+                  echo "layout: '../../layouts/SubmissionLayout.astro'" >> "src/pages/submissions/$filename.md"
+                  echo "title: $filename_noext" >> "src/pages/submissions/$filename.md"
+                  
+                  echo "---" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`$file_extension" >> "src/pages/submissions/$filename.md"
+                  
+                  cat "$file" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`" >> "src/pages/submissions/$filename.md"
+              fi
+          done
+        working-directory: ${{ github.workspace }}
+
+      - name: Generate MD Files for Data Structures
+        run: |
+          for file in DATA\ STRUCTURES/*; do
+              if [ -f "$file" ]; then
+                  filename=$(basename "$file")
+                  filename_noext="${filename%.*}"
+                  file_extension="${filename##*.}"
+                  echo "Creating $filename.md from $file"
+                  
+                  # Add front matter to the MD file
+                  echo "---" > "src/pages/submissions/$filename.md"
+                  echo "extension: $file_extension" >> "src/pages/submissions/$filename.md" # Add the extension
+                  
+                  # Get the author's username who committed the file
+                  author_username=$(git log -1 --format='%an' -- "$file")
+                  echo "author: $author_username" >> "src/pages/submissions/$filename.md" # Add the author
+                  echo "category: Algorithms" >> "src/pages/submissions/$filename.md"
+                  echo "layout: '../../layouts/SubmissionLayout.astro'" >> "src/pages/submissions/$filename.md"
+                  echo "title: $filename_noext" >> "src/pages/submissions/$filename.md"
+                  
+                  echo "---" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`$file_extension" >> "src/pages/submissions/$filename.md"
+                  
+                  cat "$file" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`" >> "src/pages/submissions/$filename.md"
+              fi
+          done
+        working-directory: ${{ github.workspace }}
+
+      - name: Generate MD Files for AppScript
+        run: |
+          for file in APPSCRIPT/*; do
+              if [ -f "$file" ]; then
+                  filename=$(basename "$file")
+                  filename_noext="${filename%.*}"
+                  file_extension="${filename##*.}"
+                  echo "Creating $filename.md from $file"
+                  
+                  # Add front matter to the MD file
+                  echo "---" > "src/pages/submissions/$filename.md"
+                  echo "extension: $file_extension" >> "src/pages/submissions/$filename.md" # Add the extension
+                  
+                  # Get the author's username who committed the file
+                  author_username=$(git log -1 --format='%an' -- "$file")
+                  echo "author: $author_username" >> "src/pages/submissions/$filename.md" # Add the author
+                  echo "category: Algorithms" >> "src/pages/submissions/$filename.md"
+                  echo "layout: '../../layouts/SubmissionLayout.astro'" >> "src/pages/submissions/$filename.md"
+                  echo "title: $filename_noext" >> "src/pages/submissions/$filename.md"
+                  
+                  echo "---" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`$file_extension" >> "src/pages/submissions/$filename.md"
+                  
+                  cat "$file" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`" >> "src/pages/submissions/$filename.md"
+              fi
+          done
+        working-directory: ${{ github.workspace }}
+
+      - name: Generate MD Files for Bash
+        run: |
+          for file in BASH/*; do
+              if [ -f "$file" ]; then
+                  filename=$(basename "$file")
+                  filename_noext="${filename%.*}"
+                  file_extension="${filename##*.}"
+                  echo "Creating $filename.md from $file"
+                  
+                  # Add front matter to the MD file
+                  echo "---" > "src/pages/submissions/$filename.md"
+                  echo "extension: $file_extension" >> "src/pages/submissions/$filename.md" # Add the extension
+                  
+                  # Get the author's username who committed the file
+                  author_username=$(git log -1 --format='%an' -- "$file")
+                  echo "author: $author_username" >> "src/pages/submissions/$filename.md" # Add the author
+                  echo "category: Algorithms" >> "src/pages/submissions/$filename.md"
+                  echo "layout: '../../layouts/SubmissionLayout.astro'" >> "src/pages/submissions/$filename.md"
+                  echo "title: $filename_noext" >> "src/pages/submissions/$filename.md"
+                  
+                  echo "---" >> "src/pages/submissions/$filename.md"
+
+                  echo "\`\`\`$file_extension" >> "src/pages/submissions/$filename.md"
+                  
+                  cat "$file" >> "src/pages/submissions/$filename.md"
+
+                  echo "\n\`\`\`" >> "src/pages/submissions/$filename.md"
+              fi
+          done
+        working-directory: ${{ github.workspace }}
+
+      - name: Generate MD Files for Interview Questions
+        run: |
+          for file in INTERVIEW\ QUESTIONS/*; do
+              if [ -f "$file" ]; then
+                  filename=$(basename "$file")
+                  filename_noext="${filename%.*}"
+                  file_extension="${filename##*.}"
+                  echo "Creating $filename_noext.md from $file"
+                  
+                  # Add front matter to the MD file
+                  echo "---" > "src/pages/submissions/$filename_noext.md"
+                  echo "extension: $file_extension" >> "src/pages/submissions/$filename_noext.md" # Add the extension
+                  
+                  # Get the author's username who committed the file
+                  author_username=$(git log -1 --format='%an' -- "$file")
+                  echo "author: $author_username" >> "src/pages/submissions/$filename_noext.md" # Add the author
+                  echo "category: Algorithms" >> "src/pages/submissions/$filename_noext.md"
+                  echo "layout: '../../layouts/SubmissionLayout.astro'" >> "src/pages/submissions/$filename_noext.md"
+                  echo "title: $filename_noext" >> "src/pages/submissions/$filename_noext.md"
+                  
+                  echo "---" >> "src/pages/submissions/$filename_noext.md"
+                  
+                  cat "$file" >> "src/pages/submissions/$filename_noext.md"
+              fi
+          done
+        working-directory: ${{ github.workspace }}
+
+      - name: Commit and Push MD Files
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add src/pages/submissions/*
+          git commit -m "Generate MD files from code"
+          git push
+        working-directory: ${{ github.workspace }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
