Make deploy run on md generation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -168,3 +168,6 @@ jobs:
         working-directory: ${{ github.workspace }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Publish Site
+        uses: ./.github/workflows/deploy.yml
