Trigger MD generation on push

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 name: Generate MD files from submissions
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   generate_md_files:
