--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -13,4 +13,4 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: "Thank you for working on this issue.Please go through the description in README.md and CONTRIBUTING.md first"
-        pr-message: "Seems like this is your first PR in this repository. Please ensure that your pr follows the guidelines and also make sure that you have gone through CONTRIBUTING.md"
+        pr-message: "Seems like this is your first PR in this repository. Please ensure that your PR follows the guidelines in CONTRIBUTING.md"
