Disable Branch protection detection in contributor.yml

--- a/.github/workflows/contributor.yml
+++ b/.github/workflows/contributor.yml
@@ -14,5 +14,6 @@ jobs:
         uses: akhilmhdh/contributors-readme-action@v2.3.6
         with:
           use_username: true
+          auto_detect_branch_protection: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
