--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -164,6 +164,7 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Generate MD files from code"
+          git pull
           git push
         working-directory: ${{ github.workspace }}
         env:
