--- a/.github/workflows/contributor.yml
+++ b/.github/workflows/contributor.yml
@@ -16,5 +16,5 @@ jobs:
           use_username: true
           auto_detect_branch_protection: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACES_BOT_FULL }}
           
