--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.1.1",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@vite-pwa/astro": "^0.1.3"
   }
 }
