--- a/.github/workflows/contributor.yml
+++ b/.github/workflows/contributor.yml
@@ -11,6 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to automate contrib in readme
     steps:
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          
       - name: Contribute List
         uses: akhilmhdh/contributors-readme-action@v2.3.6
         with:
